manifests/manifests/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soft-frontend
  namespace: plarail2021
spec:
  selector:
    matchLabels:
      app: soft-frontend
  template:
    metadata:
      labels:
        app: soft-frontend
    spec:
      containers:
        - name: plarail2022-soft-frontend
          image: ghcr.io/ueckoken/plarail2022-frontend:6aa5ebb-1668772583 # {"$imagepolicy": "plarail2021:frontend"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
