manifests/manifests/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soft-frontend
  namespace: plarail2021
spec:
  type: ClusterIP
  selector:
    app: soft-frontend
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
