manifests/manifests/frontend/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
  namespace: plarail2021
spec:
  routes:
  - kind: Rule
    match: Host(`chofufes2022.ueckoken.club`)
    services:
    - name: soft-frontend
      port: 80
    middlewares:
      - name: ipwhitelist
        namespace: traefik
  tls:
    secretName: cloudflare-cert
